Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68412

tst_plugin::test_pinyinInputMethod crashes on arm

    XMLWordPrintable

Details

    • 79e14f6c694c8c36dfea84c3962c3f0d476c8d8e (qt/qtvirtualkeyboard/dev) baf50cfdc5e1bdcf4beb5011c90fbefbdfbc0d10 (qt/qtvirtualkeyboard/6.1) 4c4f71725e050cfdfa029109acc2f971a445d855 (qt/qtvirtualkeyboard/6.2) ea4860bcc8 (qt/tqtc-qtvirtualkeyboard/5.15.8)

    Description

      Following backtrace was seen when running the test on apalis-imx6 HW:

      Core was generated by `./tst_inputpanel tst_plugin::test_pinyinInputMethod'.
      Program terminated with signal SIGABRT, Aborted.
      
      #0  __GI_raise (sig=sig@entry=6) at /usr/src/debug/glibc/2.25-r0/git/sysdeps/unix/sysv/linux/raise.c:51
      51      }
      [Current thread is 1 (Thread 0x7288a940 (LWP 1053))]
      (gdb)
      (gdb)
      (gdb)
      (gdb)
      (gdb)
      (gdb) bt
      #0  __GI_raise (sig=sig@entry=6) at /usr/src/debug/glibc/2.25-r0/git/sysdeps/unix/sysv/linux/raise.c:51
      #1  0x74ead620 in __GI_abort () at /usr/src/debug/glibc/2.25-r0/git/stdlib/abort.c:89
      #2  0x74ea50c0 in __assert_fail_base (fmt=0x74f9c20c "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x6949b2e8 "inited_", assertion@entry=0x2 <error: Cannot access memory at address 0x2>,
          file=0x74fbb088 <lock> "", file@entry=0x7288a940 "\001", line=1, line@entry=1962651784,
          function=function@entry=0x6949b628 <ime_pinyin::MatrixSearch::init_user_dictionary(char const*)::__PRETTY_FUNCTION__> "void ime_pinyin::MatrixSearch::init_user_dictionary(const char*)")
          at /usr/src/debug/glibc/2.25-r0/git/assert/assert.c:92
      #3  0x74ea519c in __GI___assert_fail (assertion=0x2 <error: Cannot access memory at address 0x2>, file=0x7288a940 "\001", line=1962651784,
          function=0x6949b628 <ime_pinyin::MatrixSearch::init_user_dictionary(char const*)::__PRETTY_FUNCTION__> "void ime_pinyin::MatrixSearch::init_user_dictionary(const char*)")
          at /usr/src/debug/glibc/2.25-r0/git/assert/assert.c:101
      #4  0x6926bc30 in ime_pinyin::MatrixSearch::init_user_dictionary (this=0xad2a38, fn_usr_dict=0x0) at share/matrixsearch.cpp:173
      #5  0x6926823c in im_init_user_dictionary (fn_usr_dict=0x0) at share/pinyinime.cpp:188
      #6  0x69246770 in QtVirtualKeyboard::PinyinDecoderService::setUserDictionary (this=0x0, enabled=false) at pinyindecoderservice.cpp:105
      #7  0x69244860 in QtVirtualKeyboard::PinyinInputMethodPrivate::resetToIdleState (this=0xa37c10) at pinyininputmethod.cpp:76
      #8  0x69245c48 in QtVirtualKeyboard::PinyinInputMethodPrivate::tryPredict (this=0xa37c10) at pinyininputmethod.cpp:316
      #9  0x692444ec in QtVirtualKeyboard::PinyinInputMethod::update (this=0xa37bb8) at pinyininputmethod.cpp:493
      #10 0x6925c7e4 in QtVirtualKeyboard::AbstractInputMethod::qt_static_metacall (_o=0xa37bb8, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0x7ec399d8) at .moc/moc_abstractinputmethod.cpp:96
      #11 0x7563bbdc in QMetaObject::activate (sender=0x78b7d8, signalOffset=3, local_signal_index=5, argv=0x0) at kernel/qobject.cpp:3771
      #12 0x7563b310 in QMetaObject::activate (sender=0x78b7d8, m=0x694b2c60 <QtVirtualKeyboard::InputEngine::staticMetaObject>, local_signal_index=5, argv=0x0) at kernel/qobject.cpp:3633
      #13 0x6925e29c in QtVirtualKeyboard::InputEngine::inputMethodUpdate (this=0x78b7d8) at .moc/moc_inputengine.cpp:525
      #14 0x6920f008 in QtVirtualKeyboard::InputEngine::update (this=0x78b7d8) at inputengine.cpp:598
      #15 0x69208bd0 in QtVirtualKeyboard::InputContext::update (this=0x78c660, queries=...) at inputcontext.cpp:773
      #16 0x692039c8 in QtVirtualKeyboard::PlatformInputContext::update (this=0x493e58, queries=...) at platforminputcontext.cpp:99
      #17 0x692044ac in QtVirtualKeyboard::PlatformInputContext::setFocusObject (this=0x493e58, object=0x849c28) at platforminputcontext.cpp:196
      #18 0x762529ac in QGuiApplicationPrivate::_q_updateFocusObject (this=0x37c108, object=0x849c28) at kernel/qguiapplication.cpp:3969
      #19 0x76252f60 in QGuiApplication::qt_static_metacall (_o=0x373ea0, _c=QMetaObject::InvokeMetaMethod, _id=14, _a=0x7ec39f58) at .moc/moc_qguiapplication.cpp:185
      #20 0x7563bbdc in QMetaObject::activate (sender=0x7ec427f0, signalOffset=3, local_signal_index=16, argv=0x7ec39f58) at kernel/qobject.cpp:3771
      #21 0x7563b310 in QMetaObject::activate (sender=0x7ec427f0, m=0x767c1e20 <QWindow::staticMetaObject>, local_signal_index=16, argv=0x7ec39f58) at kernel/qobject.cpp:3633
      #22 0x76266d24 in QWindow::focusObjectChanged (this=0x7ec427f0, _t1=0x849c28) at .moc/moc_qwindow.cpp:782
      #23 0x74b8dfe8 in QQuickWindowPrivate::setFocusInScope (this=0x48fbd8, scope=0x4d95a0, item=0x849c28, reason=Qt::OtherFocusReason, options=...) at items/qquickwindow.cpp:991
      #24 0x74b64c44 in QQuickItem::setFocus (this=0x849c28, focus=true, reason=Qt::OtherFocusReason) at items/qquickitem.cpp:7091
      #25 0x74b5e9d4 in QQuickItem::forceActiveFocus (this=0x849c28, reason=Qt::OtherFocusReason) at items/qquickitem.cpp:4688
      #26 0x74b5e9a4 in QQuickItem::forceActiveFocus (this=0x849c28) at items/qquickitem.cpp:4658
      #27 0x74b69d4c in QQuickItem::qt_static_metacall (_o=0x849c28, _c=QMetaObject::InvokeMetaMethod, _id=37, _a=0x7ec3a690) at .moc/moc_qquickitem.cpp:640
      #28 0x74b6c264 in QQuickItem::qt_metacall (this=0x849c28, _c=QMetaObject::InvokeMetaMethod, _id=37, _a=0x7ec3a690) at .moc/moc_qquickitem.cpp:1003
      #29 0x74c9bc88 in QQuickImplicitSizeItem::qt_metacall (this=0x849c28, _c=QMetaObject::InvokeMetaMethod, _id=42, _a=0x7ec3a690) at .moc/moc_qquickimplicitsizeitem_p.cpp:115
      #30 0x74c52dec in QQuickTextEdit::qt_metacall (this=0x849c28, _c=QMetaObject::InvokeMetaMethod, _id=42, _a=0x7ec3a690) at .moc/moc_qquicktextedit_p.cpp:1270
      #31 0x755f6ea8 in QMetaObject::metacall (object=0x849c28, cl=QMetaObject::InvokeMetaMethod, idx=42, argv=0x7ec3a690) at kernel/qmetaobject.cpp:301
      #32 0x75ee2454 in QQmlObjectOrGadget::metacall (this=0x7ec3a8ec, type=QMetaObject::InvokeMetaMethod, index=42, argv=0x7ec3a690) at qml/qqmlpropertycache.cpp:1733
      #33 0x75dcda2c in CallMethod (object=..., index=42, returnType=43, argCount=0, argTypes=0x0, engine=0x4e03b0, callArgs=0x682c17f8, callType=QMetaObject::InvokeMetaMethod)
          at jsruntime/qv4qobjectwrapper.cpp:1193
      #34 0x75dce654 in CallPrecise (object=..., data=..., engine=0x4e03b0, callArgs=0x682c17f8, callType=QMetaObject::InvokeMetaMethod) at jsruntime/qv4qobjectwrapper.cpp:1441
      #35 0x75dce95c in CallOverloaded (object=..., data=..., engine=0x4e03b0, callArgs=0x682c17f8, propertyCache=0x687db6d0, callType=QMetaObject::InvokeMetaMethod) at jsruntime/qv4qobjectwrapper.cpp:1511
      #36 0x75dd12a0 in QV4::QObjectMethod::callInternal (this=0x682c17f0, thisObject=0x682c1798, argv=0x682c1738, argc=0) at jsruntime/qv4qobjectwrapper.cpp:1977
      #37 0x75dd0d2c in QV4::QObjectMethod::call (m=0x682c17f0, thisObject=0x682c1798, argv=0x682c1738, argc=0) at jsruntime/qv4qobjectwrapper.cpp:1912
      #38 0x75cdf698 in QV4::FunctionObject::call (this=0x682c17f0, thisObject=0x682c1798, argv=0x682c1738, argc=0) at jsruntime/qv4functionobject_p.h:163
      #39 0x75dfaafc in QV4::Runtime::method_callProperty (engine=0x4e03b0, base=0x682c1798, nameIndex=146, argv=0x682c1738, argc=0) at jsruntime/qv4runtime.cpp:1062
      #40 0x670021a6 in ?? ()
      Backtrace stopped: previous frame identical to this frame (corrupt stack?)
      

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mitch_curtis Mitch Curtis
            sanurmen Sami Nurmenniemi
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes