pinyin: Prevent crash when pinyin dictionary cannot be loaded

In case the pinyin (system) dictionary cannot be found, the pinyin
engine is nullptr. This can lead to a crash when update() is called.

Prevent the crash by adding a nullptr check.

Fixes: QTBUG-68412
Change-Id: I04a13ff3abe4aef4a6edd2986aa943fc6d3d995d
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit 79e14f6c694c8c36dfea84c3962c3f0d476c8d8e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>